--- a/index.html
+++ b/index.html
@@ -3,56 +3,125 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная стран3ица</title>
+    <title>Мой Сайт</title>
     <style>
         body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
             font-family: Arial, sans-serif;
-        }
-        .container {
+            margin: 0;
+            padding: 0;
             display: flex;
-        }
-        .box {
-            width: 150px;
-            height: 150px;
-            background-color: #4CAF50;
-            margin: 10px;
-            display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
-            text-align: center;
-            color: white;
-            font-size: 18px;
-            border-radius: 10px;
-            transition: background-color 0.3s;
         }
-        .box a {
+        .header {
+            width: 100%;
+            background: #333;
+            color: white;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+        }
+        .header .logo {
+            display: flex;
+            align-items: center;
+        }
+        .header .logo img {
+            height: 40px;
+            margin-right: 10px;
+        }
+        .header .social-links img {
+            height: 20px;
+            margin: 0 5px;
+        }
+        .header .phone {
+            margin-right: 20px;
+        }
+        .header .menu {
+            cursor: pointer;
+            position: relative;
+        }
+        .header .dropdown-menu {
+            display: none;
+            position: absolute;
+            top: 100%;
+            right: 0;
+            background: #444;
+            padding: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+        .header .dropdown-menu a {
             color: white;
             text-decoration: none;
+            display: block;
+            margin-bottom: 5px;
         }
-        .box:hover {
-            background-color: #45a049;
+        .header .dropdown-menu a:hover {
+            text-decoration: underline;
+        }
+        .content {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: calc(100vh - 60px);
+        }
+        .rectangle {
+            width: 200px;
+            height: 100px;
+            margin: 0 10px;
+            background: #ddd;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-decoration: none;
+            color: black;
+            font-size: 18px;
+            border: 1px solid #ccc;
+            transition: background 0.3s;
+        }
+        .rectangle:hover {
+            background: #bbb;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="box">
-            <a href="page1.html">Страница 1</a>
+    <div class="header">
+        <div class="logo">
+            <img src="logo.png" alt="Logo">
+            <span>Название Сайта</span>
         </div>
-        <div class="box">
-            <a href="page2.html">Страница 2</a>
+        <div class="social-links">
+            <a href="#"><img src="facebook.png" alt="Facebook"></a>
+            <a href="#"><img src="twitter.png" alt="Twitter"></a>
+            <a href="#"><img src="instagram.png" alt="Instagram"></a>
         </div>
-        <div class="box">
-            <a href="page3.html">Страница 3</a>
+        <div class="phone">
+            +1 (234) 567-890
         </div>
-        <div class="box">
-            <a href="page4.html">Страница 4</a>
+        <div class="menu">
+            Меню
+            <div class="dropdown-menu">
+                <a href="#">Пункт 1</a>
+                <a href="#">Пункт 2</a>
+                <a href="#">Пункт 3</a>
+            </div>
         </div>
     </div>
+    <div class="content">
+        <a href="service1.html" class="rectangle">Услуга 1</a>
+        <a href="service2.html" class="rectangle">Услуга 2</a>
+        <a href="service3.html" class="rectangle">Услуга 3</a>
+        <a href="service4.html" class="rectangle">Услуга 4</a>
+    </div>
+    <script>
+        document.querySelector('.menu').addEventListener('click', function() {
+            var dropdown = document.querySelector('.dropdown-menu');
+            if (dropdown.style.display === 'block') {
+                dropdown.style.display = 'none';
+            } else {
+                dropdown.style.display = 'block';
+            }
+        });
+    </script>
 </body>
 </html>
