--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
         </div>
     </div>
     <div class="content">
-        <a href="service1.html" class="rectangle">Услуга 1</a>
-        <a href="service2.html" class="rectangle">Услуга 2</a>
-        <a href="service3.html" class="rectangle">Услуга 3</a>
-        <a href="service4.html" class="rectangle">Услуга 4</a>
+        <a href="page1.html" class="rectangle">Услуга 1</a>
+        <a href="page2.html" class="rectangle">Услуга 2</a>
+        <a href="page3.html" class="rectangle">Услуга 3</a>
+        <a href="page4.html" class="rectangle">Услуга 4</a>
     </div>
     <script>
         document.querySelector('.menu').addEventListener('click', function() {
