--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой Сайт</title>
+    <title>Тонування та юронювання вікон</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -15,7 +15,7 @@
         }
         .header {
             width: 100%;
-            background: #333;
+            background: #111;
             color: white;
             display: flex;
             justify-content: space-between;
@@ -108,10 +108,10 @@
         </div>
     </div>
     <div class="content">
-        <a href="page1.html" class="rectangle">Услуга 1</a>
-        <a href="page2.html" class="rectangle">Услуга 2</a>
-        <a href="page3.html" class="rectangle">Услуга 3</a>
-        <a href="page4.html" class="rectangle">Услуга 4</a>
+        <a href="page1.html" class="rectangle">Тонирувальна</a>
+        <a href="page2.html" class="rectangle">Бронювальна</a>
+        <a href="page3.html" class="rectangle">Атермальна</a>
+        <a href="page4.html" class="rectangle">Декоративна</a>
     </div>
     <script>
         document.querySelector('.menu').addEventListener('click', function() {
