--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
         .header {
             width: 100%;
-            background: #111;
+            background: #ddd;
             color: white;
             display: flex;
             justify-content: space-between;
