--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <body>
     <div class="header">
         <div class="logo">
-            <img src="logo.png" alt="Logo">
+            <img src="log.jpg" alt="Logo">
             <span>Название Сайта</span>
         </div>
         <div class="social-links">
