--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="header">
         <div class="logo">
             <img src="log.jpg" alt="Logo">
-            <span>Название Сайта</span>
+            <span>Masterton</span>
         </div>
         <div class="social-links">
             <a href="#"><img src="facebook.png" alt="Facebook"></a>
@@ -96,14 +96,14 @@
             <a href="#"><img src="instagram.png" alt="Instagram"></a>
         </div>
         <div class="phone">
-            +1 (234) 567-890
+            +380 (99) 565-565-7
         </div>
         <div class="menu">
             Меню
             <div class="dropdown-menu">
-                <a href="#">Пункт 1</a>
-                <a href="#">Пункт 2</a>
-                <a href="#">Пункт 3</a>
+                <a href="#">расчет</a>
+                <a href="#">обратная связь</a>
+                <a href="#">замер 3</a>
             </div>
         </div>
     </div>
