--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         .header {
             width: 100%;
             background: #ddd;
-            color: white;
+            color: black;
             display: flex;
             justify-content: space-between;
             align-items: center;
