--- a/page1.html
+++ b/page1.html
@@ -1,13 +1,200 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Страница 1</title>
+    <title>Компания по тонированию окон</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            color: #333;
+        }
+        header, footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+        }
+        nav {
+            background-color: #444;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+        }
+        nav a {
+            color: #fff;
+            margin: 0 10px;
+            text-decoration: none;
+        }
+        .container {
+            padding: 20px;
+        }
+        h1, h2, h3 {
+            color: #444;
+        }
+        .service {
+            border: 1px solid #ddd;
+            padding: 15px;
+            margin-bottom: 20px;
+            border-radius: 5px;
+        }
+        .gallery img {
+            max-width: 100%;
+            height: auto;
+        }
+        .gallery-item {
+            margin: 10px;
+        }
+        .contact-form input, .contact-form textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Это страница 1</h1>
-    <p>Содержание страницы 1.</p>
-    <a href="index.html">Назад на главную</a>
+
+<header>
+    <h1>Компания по тонированию окон</h1>
+</header>
+
+<nav>
+    <a href="#home">Главная</a>
+    <a href="#services">Услуги</a>
+    <a href="#gallery">Галерея</a>
+    <a href="#about">О компании</a>
+    <a href="#blog">Блог</a>
+    <a href="#contact">Контакты</a>
+    <a href="#faq">FAQ</a>
+</nav>
+
+<div class="container">
+    <section id="home">
+        <h2>Добро пожаловать в нашу компанию</h2>
+        <p>Мы предлагаем профессиональные услуги по тонированию окон в домах. Наши пленки улучшают комфорт и безопасность ваших окон.</p>
+        <p>Основные преимущества наших пленок: защита от УФ-лучей, повышение безопасности, улучшение энергоэффективности и декоративные возможности.</p>
+    </section>
+
+    <section id="services">
+        <h2>Наши услуги</h2>
+
+        <div class="service">
+            <h3>Тонировочная плёнка</h3>
+            <p>Тонировочная плёнка снижает яркость солнечного света и уменьшает нагрев помещения.</p>
+            <p>Примеры использования:</p>
+            <ul>
+                <li>Защита от бликов</li>
+                <li>Улучшение конфиденциальности</li>
+            </ul>
+        </div>
+
+        <div class="service">
+            <h3>Бронировочная плёнка</h3>
+            <p>Бронировочная плёнка делает стекло более прочным и не даёт ему разлететься на осколки при взрывной волне.</p>
+            <p>Преимущества:</p>
+            <ul>
+                <li>Повышение безопасности</li>
+                <li>Защита от взломов</li>
+            </ul>
+            <p>Видео-демонстрация:</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+        </div>
+
+        <div class="service">
+            <h3>Атермальная плёнка</h3>
+            <p>Атермальная плёнка обладает высокими тепловыми характеристиками, уменьшая нагрев летом и сохраняя тепло зимой.</p>
+            <p>Преимущества:</p>
+            <ul>
+                <li>Энергоэффективность</li>
+                <li>Комфортный микроклимат</li>
+            </ul>
+        </div>
+
+        <div class="service">
+            <h3>Декоративная плёнка</h3>
+            <p>Декоративная плёнка позволяет создавать уникальные дизайны и украшать окна.</p>
+            <p>Варианты:</p>
+            <ul>
+                <li>Индивидуальный дизайн</li>
+                <li>Широкий выбор цветов и узоров</li>
+            </ul>
+        </div>
+    </section>
+
+    <section id="gallery">
+        <h2>Галерея</h2>
+        <div class="gallery">
+            <div class="gallery-item">
+                <img src="image1.jpg" alt="Пример работы 1">
+            </div>
+            <div class="gallery-item">
+                <img src="image2.jpg" alt="Пример работы 2">
+            </div>
+            <div class="gallery-item">
+                <img src="image3.jpg" alt="Пример работы 3">
+            </div>
+        </div>
+    </section>
+
+    <section id="about">
+        <h2>О компании</h2>
+        <p>Наша компания была основана в [год] и с тех пор успешно предоставляет услуги по тонированию окон. Мы ценим качество и доверие наших клиентов.</p>
+        <p>Наша миссия - обеспечить комфорт и безопасность вашего дома с помощью современных решений в области тонирования окон.</p>
+        <p>Наша команда:</p>
+        <ul>
+            <li>Иван Иванов - Директор</li>
+            <li>Петр Петров - Главный инженер</li>
+            <li>Сергей Сергеев - Менеджер по продажам</li>
+        </ul>
+        <p>Партнёры и сертификаты:</p>
+        <ul>
+            <li>Партнер 1</li>
+            <li>Партнер 2</li>
+            <li>Партнер 3</li>
+        </ul>
+    </section>
+
+    <section id="blog">
+        <h2>Блог</h2>
+        <article>
+            <h3>Новинки в области тонирования окон</h3>
+            <p>Мы постоянно обновляем наш ассортимент пленок, чтобы предложить вам лучшие решения.</p>
+        </article>
+        <article>
+            <h3>Советы по уходу за пленкой</h3>
+            <p>Правильный уход за пленкой продлит её срок службы и сохранит её внешний вид.</p>
+        </article>
+    </section>
+
+    <section id="contact">
+        <h2>Контакты</h2>
+        <p>Телефон: +7 (123) 456-78-90</p>
+        <p>Email: info@example.com</p>
+        <p>Адрес: ул. Примерная, 123, г. Москва</p>
+        <p>Часы работы: Пн-Пт 9:00 - 18:00</p>
+        <h3>Форма обратной связи</h3>
+        <form class="contact-form">
+            <input type="text" name="name" placeholder="Ваше имя" required>
+            <input type="email" name="email" placeholder="Ваш email" required>
+            <textarea name="message" rows="5" placeholder="Ваше сообщение" required></textarea>
+            <button type="submit">Отправить</button>
+        </form>
+    </section>
+
+    <section id="faq">
+        <h2>Часто задаваемые вопросы (FAQ)</h2>
+        <h3>Какие гарантии вы предоставляете?</h3>
+        <p>Мы предоставляем гарантию на все виды пленок сроком на 5 лет.</p>
+        <h3>Как долго занимает установка пленки?</h3>
+        <p>В среднем, установка пленки занимает от 1 до 3 часов в зависимости от площади окон.</p>
+    </section>
+</div>
+
+<footer>
+    <p>&copy; 2024 Компания по тонированию окон. Все права защищены.</p>
+</footer>
+
 </body>
 </html>
